fixed visible focus issue

--- a/ui.frontend/src/main/webpack/components/content/core-image/v1/image/style.scss
+++ b/ui.frontend/src/main/webpack/components/content/core-image/v1/image/style.scss
@@ -4,7 +4,7 @@
     overflow: hidden;
 
     picture {
-        display: block;
+        display: inline-block;
     }
 
     .img {
